@@ -2,4 +2,7 @@ EXTRA_DIST = dolfin_fem.h \
              BoundaryCondition.h \
              FiniteElement.h \
              FunctionSpace.h \
-             Galerkin.h
+             Galerkin.h \
+             LoadVector.h \
+             MassMatrix.h \
+             StiffnessMatrix.h
