@@ -1,3 +1,6 @@
+ - Add simple StiffnessMatrix, MassMatrix, and LoadVector
+ - Change dK --> dx
+ - Change dx() --> ddx()
  - Add support for GiD file format
  - Add performance tests for multi-adaptivity (both stiff and non-stiff)
  - First version of Newton for the multi-adaptive solver
